Setup checkstyle in pipeline